[package]
name = "bevy_slippy_tiles"
version = "0.9.0"
edition = "2021"
description = "Provides slippy tile fetching functionality in the Bevy game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/edouardpoitras/bevy_slippy_tiles"

[features]
default = ["display"]
display = []

[dependencies]
async-lock = "3.0"
bevy = "0.16"
bevy_platform = "0.16"
ehttp = { version = "0.5", features = ["native-async"] }
googleprojection = "1.2"

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["display"]

[[example]]
name = "interactive"
path = "examples/interactive.rs"
required-features = ["display"]
